PROJECT(Test)
CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

SET(CMAKE_C_STANDARD 99)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

INCLUDE_DIRECTORIES(./src)
INCLUDE_DIRECTORIES(./old/tree)
INCLUDE_DIRECTORIES(./old/list_table)

AUX_SOURCE_DIRECTORY(./src SRC_LIST)
AUX_SOURCE_DIRECTORY(./old/tree SRC_LIST)
AUX_SOURCE_DIRECTORY(./old/list_table SRC_LIST)

ADD_EXECUTABLE(Test main.c ${SRC_LIST})